--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GOOGLE_ID="545125922041-d3tt1rs2qfoi8jt7anbmpb8gv6iif4d5.apps.googleusercontent.com"
 GOOGLE_SECRET="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"
+
+MONGODB_URI="mongodb+srv://amirbekshomurodov01:Vqak26hagluSoTVp@cluster0.rxubwcx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
