--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.2.0",
+    "@aws-sdk/client-s3": "^3.592.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.7.2",
+    "formidable": "^3.5.1",
+    "mime-types": "^2.1.35",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
-    "next": "14.2.3",
+    "multiparty": "^4.2.3",
+    "next": "^14.2.4",
     "next-auth": "^4.24.7",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-sortable": "^2.0.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.13.8",
+    "react-sweetalert2": "^0.6.0",
+    "sortablejs": "^1.15.2"
   },
   "devDependencies": {
     "eslint": "^8",
