--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.592.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "formidable": "^3.5.1",
     "mime-types": "^2.1.35",
     "mongodb": "^6.7.0",
@@ -22,9 +23,11 @@
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flying-item": "^1.1.3",
+    "react-loading-ui": "^1.3.0",
     "react-sortable": "^2.0.0",
     "react-sortablejs": "^6.1.4",
-    "react-spinners": "^0.13.8",
+    "react-spinners": "^0.14.1",
     "react-sweetalert2": "^0.6.0",
     "sortablejs": "^1.15.2"
   },
